force-app/main/default/objects/Portal__c/fields/AutoPublishListings__c.field-meta.xml
<CustomField>
    <fullName>AutoPublishListings__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When you check this box, all current and future listings that have the field &apos;Allowed for Auto Publish&apos; checked and are valid for publishing are automatically published to this portal once</inlineHelpText>
    <label>Auto Publish Listings</label>
    <type>Checkbox</type>
</CustomField>