force-app/main/default/objects/Portal__c/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <description>Contains the portal-specific configuration (e.g. authentication credentials) as JSON.</description>
    <label>Portal Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>