force-app/main/default/objects/Portal__c/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <label>Endpoint / URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>