force-app/main/default/objects/Portal__c/fields/generator__c.field-meta.xml
<CustomField>
    <fullName>generator__c</fullName>
    <label>Generator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dubizzle</fullName>
            </value>
            <value>
                <fullName>XML2U</fullName>
            </value>
            <value>
                <fullName>Propertyfinder</fullName>
            </value>
            <value>
                <fullName>1001Portales</fullName>
            </value>
            <value>
                <fullName>Rightmove</fullName>
            </value>
            <value>
                <fullName>Bayut</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>