force-app/main/default/objects/Portal__c/fields/IsTestPortal__c.field-meta.xml
<CustomField>
    <fullName>IsTestPortal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked (= true) the feed export will be stopped after rendering. The feed will not be exported to the actual portal but will be available via a pickup-URL.</inlineHelpText>
    <label>Is Test Portal</label>
    <type>Checkbox</type>
</CustomField>