force-app/main/default/objects/Portal__c/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <description>Contains the field mapping for this portal as JSON.</description>
    <label>Field Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>