force-app/main/default/objects/Portal__c/fields/maxAttachments__c.field-meta.xml
<CustomField>
    <fullName>maxAttachments__c</fullName>
    <inlineHelpText>max number of images, pdfs. leave empty if you don&apos;t want to force any restrictions.</inlineHelpText>
    <label>max. Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>