force-app/main/default/objects/Portal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>