force-app/main/default/objects/Portal__c/fields/SystemName__c.field-meta.xml
<CustomField>
    <fullName>SystemName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SystemName</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>