force-app/main/default/objects/Portal__c/fields/transferType__c.field-meta.xml
<CustomField>
    <fullName>transferType__c</fullName>
    <label>Type of transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pull</fullName>
            </value>
            <value>
                <fullName>ftp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>