force-app/main/default/objects/Portal__c/validationRules/Check_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Characters</fullName>
    <active>true</active>
    <description>DEPRECATED</description>
    <errorConditionFormula>NOT(REGEX(Name, &quot;^[a-zA-Z0-9_\\. \\-]{3,80}$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter at least 3 characters. Make sure to only include letters (a-z), digits, space, underscore, minus and dot. Please do not use any special characters.</errorMessage>
</ValidationRule>